Add ol to instructions and back button

--- a/recipes/rellenos-de-papas.html
+++ b/recipes/rellenos-de-papas.html
@@ -33,44 +33,47 @@
       <li>oil for frying</li>
     </ul>
     <h2>Instructions</h2>
-    <li>
-      Start by peeling the potatoes and rinsing them in cold water. Chop them
-      into quarters and place them in a large pot. Cover with water and cook for
-      25-30 minutes or until fork-tender.
-    </li>
-    <li>
-      Once the potatoes are fork-tender, drain well. Pass hot potatoes through a
-      ricer into a large bowl. Add the egg, butter, granulated garlic, and salt.
-      Season generously. Let the potato mixture cool completely.
-    </li>
-    <li>
-      While the potatoes cool, prepare the ground beef mixture. Heat some oil in
-      a large skillet over medium-high heat. Add the beef and brown completely.
-      This should take about 10 minutes. Add the onions and tomato paste and
-      cook for 2-3 minutes. Stir in the garlic, adobo, sazon, bay leaf, tomato
-      sauce, and olives. Reduce the heat to medium-low, cover, and cook for
-      15-20 minutes. Allow the beef mixture to cool completely.
-    </li>
-    <li>
-      Measure out about 1/4 cup of the potato mixture onto the palm of your
-      hand. Flatten the potato mixture with an indentation in the center. Add
-      about 1-2 tbsp of the beef mixture to the center and roll the potato into
-      a ball. You can make these as small or big as you like.
-    </li>
-    <li>
-      In a bowl, whisk 3 eggs. Add the plain breadcrumbs to a separate dish and
-      season with salt and peppe
-    </li>
-    <li>
-      Dip the balls into the egg mixture and then roll in the breadcrumbs.
-      Repeat this process twice or until the potato balls are completely coated.
-      Place the potato balls on a lined baking sheet with parchment paper and
-      freeze for 30 minutes.
-    </li>
-    <li>
-      Heat some oil and fry the potato balls for 2-3 minutes on each side or
-      until golden brown. It's important to flip the potato balls frequently for
-      even coloring
-    </li>
+    <ol>
+        <li>
+          Start by peeling the potatoes and rinsing them in cold water. Chop them
+          into quarters and place them in a large pot. Cover with water and cook for
+          25-30 minutes or until fork-tender.
+        </li>
+        <li>
+          Once the potatoes are fork-tender, drain well. Pass hot potatoes through a
+          ricer into a large bowl. Add the egg, butter, granulated garlic, and salt.
+          Season generously. Let the potato mixture cool completely.
+        </li>
+        <li>
+          While the potatoes cool, prepare the ground beef mixture. Heat some oil in
+          a large skillet over medium-high heat. Add the beef and brown completely.
+          This should take about 10 minutes. Add the onions and tomato paste and
+          cook for 2-3 minutes. Stir in the garlic, adobo, sazon, bay leaf, tomato
+          sauce, and olives. Reduce the heat to medium-low, cover, and cook for
+          15-20 minutes. Allow the beef mixture to cool completely.
+        </li>
+        <li>
+          Measure out about 1/4 cup of the potato mixture onto the palm of your
+          hand. Flatten the potato mixture with an indentation in the center. Add
+          about 1-2 tbsp of the beef mixture to the center and roll the potato into
+          a ball. You can make these as small or big as you like.
+        </li>
+        <li>
+          In a bowl, whisk 3 eggs. Add the plain breadcrumbs to a separate dish and
+          season with salt and peppe
+        </li>
+        <li>
+          Dip the balls into the egg mixture and then roll in the breadcrumbs.
+          Repeat this process twice or until the potato balls are completely coated.
+          Place the potato balls on a lined baking sheet with parchment paper and
+          freeze for 30 minutes.
+        </li>
+        <li>
+          Heat some oil and fry the potato balls for 2-3 minutes on each side or
+          until golden brown. It's important to flip the potato balls frequently for
+          even coloring
+        </li>
+    </ol>
+    <a href="../index.html">Back</a>
   </body>
 </html>
