Add back button to web pages
Add a back button to return to index.html since the
user had no way to return without it.

--- a/recipes/ensalada-de-carrucho.html
+++ b/recipes/ensalada-de-carrucho.html
@@ -67,5 +67,6 @@
         el sabor es buenísimo y a tu familia le encantará.
       </li>
     </ol>
+    <a href="../index.html">Back</a>
   </body>
 </html>
