Add styles to *.html
I added styles to all of the .html files. Also added the puerto rican
flag to the index file including styling within that.

--- a/recipes/ensalada-de-carrucho.html
+++ b/recipes/ensalada-de-carrucho.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ensalada de Carrucho</title>
+    <link rel="stylesheet" href="../css/styles.css"
   </head>
   <body>
     <h1>Ensalada de Carrucho</h1>
     <img
       src="../img/ensalada-de-carrucho.jpeg"
       alt="Una foto de ensalada de carrucho"
+      class="food-image"
     />
     <p>
       La Ensalada de Carrucho es una de las recetas tradicionales de gastronomía
