--- a/recipes/pastelon.html
+++ b/recipes/pastelon.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Pastelón</title>
+    <link rel="stylesheet" href="../css/styles.css"
   </head>
   <body>
     <h1>Pastelón</h1>
-    <img src="../img/pastelon.jpeg" alt="Una foto de pastelon" />
+    <img class="food-image" src="../img/pastelon.jpeg" alt="Una foto de pastelon" />
     <p>
       El pastelón es un plato casero por excelencia y combina la dulzura de los
       plátanos maduros fritos con el relleno de carne cocida con el infaltable
