--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <div class="img-container">
+      <img
+        class="title-flag"
+        src="img/puerto-rican-flag.jpeg"
+        alt="the beautiful puerto rican flag"
+      />
+    </div>
     <ul>
-        <li><a href="./recipes/ensalada-de-carrucho.html">Ensalada de carrucho</a></li>
-        <li><a href="./recipes/pastelon.html">Pastelón</a></li>
-        <li><a href="./recipes/rellenos-de-papas.html">Rellenos de Papas</a></li>
+      <li class="title-nav">
+        <a href="./recipes/ensalada-de-carrucho.html">Ensalada de carrucho</a>
+      </li>
+      <li class="title-nav"><a href="./recipes/pastelon.html">Pastelón</a></li>
+      <li class="title-nav">
+        <a href="./recipes/rellenos-de-papas.html">Rellenos de Papas</a>
+      </li>
     </ul>
   </body>
 </html>
