Add div around nav

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         alt="the beautiful puerto rican flag"
       />
     </div>
-    <ul>
-      <li class="title-nav">
-        <a href="./recipes/ensalada-de-carrucho.html">Ensalada de carrucho</a>
-      </li>
-      <li class="title-nav"><a href="./recipes/pastelon.html">Pastelón</a></li>
-      <li class="title-nav">
-        <a href="./recipes/rellenos-de-papas.html">Rellenos de Papas</a>
-      </li>
-    </ul>
+    <div class="nav">
+      <ul>
+        <li class="title-nav">
+          <a href="./recipes/ensalada-de-carrucho.html">Ensalada de carrucho</a>
+        </li>
+        <li class="title-nav"><a href="./recipes/pastelon.html">Pastelón</a></li>
+        <li class="title-nav">
+          <a href="./recipes/rellenos-de-papas.html">Rellenos de Papas</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
