Fix ingredientes not being within border

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
       />
     </div>
     <div class="nav">
-      <ul>
+      <ul class="title-nav-container">
         <li class="title-nav">
           <a href="./recipes/ensalada-de-carrucho.html">Ensalada de carrucho</a>
         </li>
-        <li class="title-nav"><a href="./recipes/pastelon.html">Pastelón</a></li>
+        <li class="title-nav">
+          <a href="./recipes/pastelon.html">Pastelón</a>
+        </li>
         <li class="title-nav">
           <a href="./recipes/rellenos-de-papas.html">Rellenos de Papas</a>
         </li>
