--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <title>Odin Recipes</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/homepage.css" />
   </head>
+
   <body>
     <h1>Odin Recipes</h1>
     <div class="img-container">
@@ -17,13 +19,22 @@
     <div class="nav">
       <ul class="title-nav-container">
         <li class="title-nav">
-          <a href="./recipes/ensalada-de-carrucho.html">Ensalada de carrucho</a>
+          <a href="recipes/ensalada-de-carrucho.html" class="img-link"
+            ><img src="img/ensalada-de-carrucho.jpeg" alt=""
+          /></a>
+          <p>Ensalada de Carrucho</p>
         </li>
         <li class="title-nav">
-          <a href="./recipes/pastelon.html">Pastelón</a>
+          <a href="recipes/pastelon.html" class="img-link"
+            ><img src="img/pastelon.jpeg" alt=""
+          /></a>
+        <p>Pastelón</p>
         </li>
         <li class="title-nav">
-          <a href="./recipes/rellenos-de-papas.html">Rellenos de Papas</a>
+          <a href="/recipes/rellenos-de-papas.html" class="img-link"
+            ><img src="img/rellenos-de-papas.jpeg" alt=""
+          /></a>
+          <p>Rellenos de Papas</p>
         </li>
       </ul>
     </div>
