Add border around *.html files with style

--- a/index.html
+++ b/index.html
@@ -8,35 +8,37 @@
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-    <div class="img-container">
-      <img
-        class="title-flag"
-        src="img/puerto-rican-flag.jpeg"
-        alt="the beautiful puerto rican flag"
-      />
-    </div>
-    <div class="nav">
-      <ul class="title-nav-container">
-        <li class="title-nav">
-          <a href="recipes/ensalada-de-carrucho.html" class="img-link"
-            ><img src="img/ensalada-de-carrucho.jpeg" alt=""
-          /></a>
-          <p>Ensalada de Carrucho</p>
-        </li>
-        <li class="title-nav">
-          <a href="recipes/pastelon.html" class="img-link"
-            ><img src="img/pastelon.jpeg" alt=""
-          /></a>
-        <p>Pastelón</p>
-        </li>
-        <li class="title-nav">
-          <a href="/recipes/rellenos-de-papas.html" class="img-link"
-            ><img src="img/rellenos-de-papas.jpeg" alt=""
-          /></a>
-          <p>Rellenos de Papas</p>
-        </li>
-      </ul>
+    <div class="container">
+      <h1>Odin Recipes</h1>
+      <div class="img-container">
+        <img
+          class="title-flag"
+          src="img/puerto-rican-flag.jpeg"
+          alt="the beautiful puerto rican flag"
+        />
+      </div>
+      <div class="nav">
+        <ul class="title-nav-container">
+          <li class="title-nav">
+            <a href="recipes/ensalada-de-carrucho.html" class="img-link"
+              ><img src="img/ensalada-de-carrucho.jpeg" alt=""
+            /></a>
+            <p>Ensalada de Carrucho</p>
+          </li>
+          <li class="title-nav">
+            <a href="recipes/pastelon.html" class="img-link"
+              ><img src="img/pastelon.jpeg" alt=""
+            /></a>
+          <p>Pastelón</p>
+          </li>
+          <li class="title-nav">
+            <a href="recipes/rellenos-de-papas.html" class="img-link"
+              ><img src="img/rellenos-de-papas.jpeg" alt=""
+            /></a>
+            <p>Rellenos de Papas</p>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
