--- a/recipes/ensalada-de-carrucho.html
+++ b/recipes/ensalada-de-carrucho.html
@@ -3,72 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ensalada de Carrucho</title>
-    <link rel="stylesheet" href="../css/styles.css"
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <h1>Ensalada de Carrucho</h1>
-    <img
-      src="../img/ensalada-de-carrucho.jpeg"
-      alt="Una foto de ensalada de carrucho"
-      class="food-image"
-    />
-    <p>
-      La Ensalada de Carrucho es una de las recetas tradicionales de gastronomía
-      tradicional de Puerto Rico. A este molusco también se le conoce como Lambi
-      en República Dominica o caracol en la región costera de centro y sur
-      América.
-    </p>
-    <p>
-      Esta receta contiene el exquisito sabor caribeño que la hace destacar
-      entre las formas de hacer ensaladas con mariscos, así que esperamos que la
-      disfrutes.
-    </p>
-    <h2>Ingredientes</h2>
-    <ul>
-      <li>4 libras de carrucho</li>
-      <li>½ pimiento verde</li>
-      <li>1 tomate</li>
-      <li>½ pimiento rojo</li>
-      <li>2 cucharadas de vinagre</li>
-      <li>½ cebolla</li>
-      <li>Cilantro picado al gusto</li>
-      <li>½ pimiento amarillo</li>
-      <li>El jugo de medio limón</li>
-      <li>Cebolla en polvo</li>
-      <li>Ajo en Polvo al gusto</li>
-      <li>Aceite de oliva al gusto</li>
-      <li>Sal y pimienta al gusto</li>
-    </ul>
-    <h2>Cómo hacer ensalada de carrucho boricua</h2>
-    <ol>
-      <li>
-        Primero, ponemos a cocinar el carrucho en una olla con agua, dependiendo
-        de su frescura podría ser entre 45 minutos a 2 horas.
-      </li>
-      <li>Después lo cortamos en cuadritos y ponemos en un bowl.</li>
-      <li>
-        Luego cortaremos los pimientos, la cebolla y el tomate en cuadritos
-        pequeños para mezclarlos con el carrucho.
-      </li>
-      <li>
-        También picaremos un poco de cilantro y lo mezclaremos con los demás
-        ingredientes, esto le dará un olor y sabor agradable.
-      </li>
-      <li>
-        Por ultimo sazonaremos la ensalada de carrucho con vinagre, aceite de
-        oliva, ajo y sal en polvo y mezclaremos.
-      </li>
-      <li>
-        A continuación daremos el toque final con el jugo de limón, la sal y
-        pimienta, siempre verificando la sazón para que la ensalada tenga un
-        buen sabor.
-      </li>
-      <li>
-        Finalmente, nuestra Receta de Ensalada de Carrucho esta lista para y
-        solo falta reservarla en la nevera por al menos 2 horas para servirse,
-        el sabor es buenísimo y a tu familia le encantará.
-      </li>
-    </ol>
-    <a href="../index.html">Back</a>
-  </body>
+    <div class="container">
+      <h1>Ensalada de Carrucho</h1>
+      <img
+        src="../img/ensalada-de-carrucho.jpeg"
+        alt="Una foto de ensalada de carrucho"
+        class="food-image"
+      />
+      <p>
+        La Ensalada de Carrucho es una de las recetas tradicionales de gastronomía
+        tradicional de Puerto Rico. A este molusco también se le conoce como Lambi
+        en República Dominica o caracol en la región costera de centro y sur
+        América.
+      </p>
+      <p>
+        Esta receta contiene el exquisito sabor caribeño que la hace destacar
+        entre las formas de hacer ensaladas con mariscos, así que esperamos que la
+        disfrutes.
+      </p>
+      <h2>Ingredientes</h2>
+      <ul>
+        <li>4 libras de carrucho</li>
+        <li>½ pimiento verde</li>
+        <li>1 tomate</li>
+        <li>½ pimiento rojo</li>
+        <li>2 cucharadas de vinagre</li>
+        <li>½ cebolla</li>
+        <li>Cilantro picado al gusto</li>
+        <li>½ pimiento amarillo</li>
+        <li>El jugo de medio limón</li>
+        <li>Cebolla en polvo</li>
+        <li>Ajo en Polvo al gusto</li>
+        <li>Aceite de oliva al gusto</li>
+        <li>Sal y pimienta al gusto</li>
+      </ul>
+      <h2>Cómo hacer ensalada de carrucho boricua</h2>
+      <ol>
+        <li>
+          Primero, ponemos a cocinar el carrucho en una olla con agua, dependiendo
+          de su frescura podría ser entre 45 minutos a 2 horas.
+        </li>
+        <li>Después lo cortamos en cuadritos y ponemos en un bowl.</li>
+        <li>
+          Luego cortaremos los pimientos, la cebolla y el tomate en cuadritos
+          pequeños para mezclarlos con el carrucho.
+        </li>
+        <li>
+          También picaremos un poco de cilantro y lo mezclaremos con los demás
+          ingredientes, esto le dará un olor y sabor agradable.
+        </li>
+        <li>
+          Por ultimo sazonaremos la ensalada de carrucho con vinagre, aceite de
+          oliva, ajo y sal en polvo y mezclaremos.
+        </li>
+        <li>
+          A continuación daremos el toque final con el jugo de limón, la sal y
+          pimienta, siempre verificando la sazón para que la ensalada tenga un
+          buen sabor.
+        </li>
+        <li>
+          Finalmente, nuestra Receta de Ensalada de Carrucho esta lista para y
+          solo falta reservarla en la nevera por al menos 2 horas para servirse,
+          el sabor es buenísimo y a tu familia le encantará.
+        </li>
+      </ol>
+      <a href="../index.html">Back</a>
+        </body>
+    </div>
 </html>
